@@ -1341,6 +1341,11 @@
         <source>Replacements</source>
         <translation>Zamienniki</translation>
     </message>
+    <message>
+        <location filename="../../syntax.cpp" line="249"/>
+        <source>The size limit for syntax highlighting is exceeded.</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>FeatherPad::FileDialog</name>
